<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sketchproject.schoolzmatch.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin_large"
        android:paddingLeft="@dimen/activity_horizontal_margin_large"
        android:paddingRight="@dimen/activity_horizontal_margin_large"
        android:paddingTop="@dimen/activity_vertical_margin_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/label_profile"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:textColor="@color/colorGray"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:gravity="top"
            android:hint="@string/prompt_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_address"
            android:textColor="@color/colorGray"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:gravity="top"
            android:hint="@string/prompt_address"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/label_gender"
            android:textColor="@color/colorGray"
            android:textSize="12sp" />

        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:checked="true"
                android:text="@string/label_male"
                android:textColor="@color/colorPrimaryDark" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_female"
                android:textColor="@color/colorPrimaryDark" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/label_school"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_school_name"
            android:textColor="@color/colorGray"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editSchool"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:gravity="top"
            android:hint="@string/prompt_school"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_grade"
            android:textColor="@color/colorGray"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editGrade"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:gravity="top"
            android:hint="@string/prompt_grade"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_filled"
            android:text="@string/button_save"
            android:textColor="@color/colorLight" />
    </LinearLayout>

</ScrollView>
