<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin_large"
        android:paddingRight="@dimen/activity_horizontal_margin_large"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_about_thanks"
            android:textColor="@color/colorLight"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:alpha="0.8"
            android:text="@string/label_about_desc"
            android:textColor="@color/colorLight" />

        <ImageView
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_logo"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/label_copyright"
            android:textColor="@color/colorLight"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autoLink="all"
            android:text="@string/label_about_email"
            android:textColor="@color/colorLight"
            android:textColorLink="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autoLink="all"
            android:text="@string/label_about_website"
            android:textColor="@color/colorLight"
            android:textColorLink="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_about_third_party"
            android:textColor="@color/colorLight"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:alpha="0.8"
            android:text="@string/label_about_library"
            android:textColor="@color/colorLight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_library_betterpicked"
            android:textColor="@color/colorLight"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:alpha="0.8"
            android:text="@string/label_library_betterpicked_desc"
            android:textColor="@color/colorLight" />

    </LinearLayout>
</ScrollView>

