<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin_large"
    android:paddingRight="@dimen/activity_horizontal_margin_large"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sketchproject.schoolzmatch.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/cd_logo"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:alpha="0.8"
        android:paddingRight="95dp"
        android:text="@string/app_subtitle"
        android:textColor="@color/colorLight"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin_small"
            android:height="55dp"
            android:background="@drawable/button_border"
            android:text="@string/button_profile"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin_small"
            android:height="55dp"
            android:background="@drawable/button_border"
            android:text="@string/button_schedule"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin_small"
            android:height="55dp"
            android:background="@drawable/button_border"
            android:text="@string/button_about"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin_small"
            android:height="55dp"
            android:background="@drawable/button_filled"
            android:text="@string/button_exit"
            android:textColor="@color/colorLight"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/label_copyright"
        android:textColor="@color/colorBackgroundLight" />

</RelativeLayout>
