<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.sketchproject.schoolzmatch.SplashActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/cd_wave"
        android:paddingBottom="80dp"
        android:scaleType="center"
        android:scaleX="1.12"
        android:scaleY="1.12"
        android:src="@drawable/wave" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="90dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/label_reminder"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Take a Bath"
            android:textColor="@color/colorLight"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <Button
            android:id="d"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:background="@drawable/button_filled"
            android:text="@string/button_turn_off"
            android:textColor="@color/colorLight" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/label_next_task"
            android:textColor="@color/colorLight"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nextTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="Breakfast"
            android:textColor="@color/colorBackgroundLight"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

</RelativeLayout>
